--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -15,27 +15,29 @@
         <div class="main">
             <form action="" name="calculator">
                 <input type="text" id="num" class="text maincolor" name="text1" disabled>
-                <input type="text" id="c" class="text maincolor" name="text12" value="C" onclick="location.reload()" ><br>
+                <input type="button" id="c" class="text maincolor" name="text12" value="C" onclick="location.reload()"><br>
 
-                <input type="button" class="nummaincolor" name="btn9" value="9" onclick="displaynum(btn9.value)">
-                <input type="button" class="nummaincolor" name="btn8" value="8" onclick="displaynum(btn8.value)">
                 <input type="button" class="nummaincolor" name="btn7" value="7" onclick="displaynum(btn7.value)">
+                <input type="button" class="nummaincolor" name="btn8" value="8" onclick="displaynum(btn8.value)"> 
+                <input type="button" class="nummaincolor" name="btn9" value="9" onclick="displaynum(btn9.value)">
                 <input type="button" class="soma" name="btnadd" value="+" onclick="displaynum(btnadd.value)"><br>
                 
-                <input type="button" class="nummaincolor" name="btn6" value="6" onclick="displaynum(btn6.value)">
-                <input type="button" class="nummaincolor" name="btn5" value="5" onclick="displaynum(btn5.value)">
                 <input type="button" class="nummaincolor" name="btn4" value="4" onclick="displaynum(btn4.value)">
+                <input type="button" class="nummaincolor" name="btn5" value="5" onclick="displaynum(btn5.value)">
+                <input type="button" class="nummaincolor" name="btn6" value="6" onclick="displaynum(btn6.value)">
                 <input type="button" class="subt" name="btnsub" value="-" onclick="displaynum(btnsub.value)"><br>
                 
-                <input type="button" class="nummaincolor" name="btn3" value="3" onclick="displaynum(btn3.value)">
-                <input type="button" class="nummaincolor" name="btn2" value="2" onclick="displaynum(btn2.value)">
                 <input type="button" class="nummaincolor" name="btn1" value="1" onclick="displaynum(btn1.value)">
+                <input type="button" class="nummaincolor" name="btn2" value="2" onclick="displaynum(btn2.value)">
+                <input type="button" class="nummaincolor" name="btn3" value="3" onclick="displaynum(btn3.value)">
                 <input type="button" class="mult" name="btnmult" value="*" onclick="displaynum(btnmult.value)"><br>
 
                 <input type="button" class="nummaincolor" name="btnponto" value="." onclick="displaynum(btnponto.value)">
                 <input type="button" class="nummaincolor" name="btn0" value="0" onclick="displaynum(btn0.value)">
                 <input type="button" class="igual" name="btnigual" value="=" onclick="text1.value=eval(text1.value)">
                 <input type="button" class="div" name="btndiv" value="/" onclick="displaynum(btndiv.value)"><br>
+
+                <input type="button" class="backs" name="btnbacks" value="Backspace" onclick="backspace()">
             </form>
         </div>
     </section>
