--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -14,8 +14,8 @@
     <section>
         <div class="main">
             <form action="" name="calculator">
-                <input type="text" id="num" class="text maincolor" name="text1" disabled>
-                <input type="button" id="c" class="text maincolor" name="text12" value="C" onclick="location.reload()"><br>
+                <input type="text" id="num" class="text maincolor" name="text1" placeholder="0" disabled>
+                <input type="reset" id="c" class="text maincolor" name="text12" value="C"><br>
 
                 <input type="button" class="nummaincolor" name="btn7" value="7" onclick="displaynum(btn7.value)">
                 <input type="button" class="nummaincolor" name="btn8" value="8" onclick="displaynum(btn8.value)"> 
