--- a/projeto-bootstrap/pages/humanflight.html
+++ b/projeto-bootstrap/pages/humanflight.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.css"
+    />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../css/humanflight.css" />
+    <title>Human Spaceflight</title>
+  </head>
+  <body>
+    <header>
+      <div class="container p-4 aedit">
+        <a href="index.html">INICIO</a>
+        <a class="m-3" href="falcon.html">FALCON 9</a>
+        <a href="humanflight.html">HUMAN SPACE FLIGHT</a>
+      </div>
+      <div class="container mt-5" data-aos="fade-down" data-aos-duration="1500">
+        <h1>HUMAN SPACEFLIGHT</h1>
+        <p class="display-6 pt-4 subtitulo">FAZENDO A VIDA MULTIPLANETÁRIA</p>
+    </div>
+    </header>
+
+    <main>
+      <section class="sec0">
+        <div class="container py-5 sinop" data-aos="flip-right" data-aos-duration="1500">
+            <p style="color:#D8D8D8">
+                SpaceX também oferece voos cormeciais para orbita terrestre e lunar. Para começar a  planejar a sua jornada, por favor contate-nos por <a href="#">emailfictício@gmail.com</a>
+            </p>
+        </div>
+      </section>
+      <section class="sec1">
+        <div class="container" data-aos="fade-right" data-aos-duration="1500">
+          <h2 class="h6">MISSÃO</h2>
+          <h2 class="titulo mb-2">ÓRBITA DA TERRA</h2>
+          <p class="paragrafo display-6">EXPERIMENTE O PLANETA AZUL A 300KM DE ALTURA</p>
+          <button type="button" class="btn btn-outline-light px-5 py-3">
+            EXPLORAR
+          </button>
+        </div>
+      </section>
+      <section class="sec2">
+        <div class="container" data-aos="fade-up" data-aos-duration="1500">
+          <h2 class="h6">MISSÃO</h2>
+          <h2 class="titulo mb-2">ESTAÇÃO ESPACIAL</h2>
+          <p class="paragrafo display-6">TRANSPORTANTO HUMANOS PARA O LABORATÓRIO VOADOR NO CÉU</p>
+          <button type="button" class="btn btn-outline-light px-5 py-3">
+            EXPLORAR
+          </button>
+        </div>
+      </section>
+      <section class="sec3">
+        <div class="container" data-aos="fade-up-right" data-aos-duration="1500">
+            <h2 class="h6">MISSÃO</h2>
+            <h2 class="titulo mb-2">LUA</h2>
+            <p class="paragrafo display-6">RETORNANDO HUMANOS PARA A NOSSA LUA VIZINHA</p>
+            <button type="button" class="btn btn-outline-light px-5 py-3">
+                EXPLORAR
+            </button>
+        </div>
+      </section>
+      <section class="sec4">
+        <div class="container" data-aos="flip-right" data-aos-duration="2000">
+            <h2 class="h6">MISSÃO</h2>
+            <h2 class="titulo mb-2">MARTE E ALÉM</h2>
+            <p class="paragrafo display-6">O CAMINHO PARA TORNAR A HUMANIDADE MULTIPLANETÁRIA</p>
+            <button type="button" class="btn btn-outline-light px-5 py-3">
+                 EXPLORAR
+            </button>
+        </div>
+      </section>
+      <section class="sec5">
+        <div class="container cont">
+            <p data-aos="fade-right" data-aos-duration="1500">Para mais informações sobre os serviçoes entre em contato com <a href="#" style="color:#D8D8D8">emailfictício@gmail.com</a></p>
+            <button type="button" class="btn btn-outline-light px-3 py-3 mx-1 my-1" data-aos="flip-left" data-aos-duration="1500">
+                BAIXAR GUIA DO USUÁRIO
+           </button>
+           <button type="button" class="btn btn-outline-light px-3 py-3 mx-1 my-1" data-aos="flip-left" data-aos-duration="1500">
+                CAPACIDADES E SERVIÇOS
+            </button>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="container text-center pb-5">
+        <span class="m-2" style="color: #555252">Sitebased © 2022</span>
+        <a class="m-2" href="">Instagram</a>
+        <a class="m-2" href="">YouTube</a>
+        <a class="m-2" href="">Twitter</a>
+      </div>
+    </footer>
+
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
