--- a/projeto-bootstrap/pages/index.html
+++ b/projeto-bootstrap/pages/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/home.css">
-    <title>Home</title>
+    <title>Inicio</title>
 </head>
 <body>
     <header>
         <div class="container p-4 aedit">
-            <a class="m-3" href="index.html">HOME</a>
+            <a class="m-3" href="index.html">INICIO</a>
             <a class="m-3" href="falcon.html">FALCON 9</a>
             <a href="humanflight.html">HUMAN SPACE FLIGHT</a>
         </div>
@@ -53,7 +54,7 @@
 
     <footer>
         <div class="container text-center py-5">
-            <span class="m-2" style="color: #555252;">OneBitCode © 2021</span>
+            <span class="m-2" style="color: #555252;">Sitebased © 2022</span>
             <a class="m-2" href="">Instagram</a>
             <a class="m-2" href="">YouTube</a>
             <a class="m-2" href="">Twitter</a>
