--- a/projeto-bootstrap/pages/humanflight.html
+++ b/projeto-bootstrap/pages/humanflight.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="container p-4 aedit">
-        <a href="index.html">INICIO</a>
+        <a class="m-3" href="index.html">INICIO</a>
         <a class="m-3" href="falcon.html">FALCON 9</a>
         <a href="humanflight.html">HUMAN SPACE FLIGHT</a>
       </div>
