--- a/projeto-bootstrap/pages/falcon.html
+++ b/projeto-bootstrap/pages/falcon.html
@@ -4,9 +4,169 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../css/falcon.css" />
+    <title>Falcon 9</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container p-4 aedit">
+          <a class="m-3" href="index.html">INICIO</a>
+          <a class="m-3" href="falcon.html">FALCON 9</a>
+          <a href="humanflight.html">HUMAN SPACE FLIGHT</a>
+        </div>
+        <div class="container mt-5" data-aos="fade-up" data-aos-duration="1500">
+          <h1>FALCON</h1>
+          <p class="pt-4 subtitulo">PRIMEIRA CLASSE DE FOGUETES DE ORBITA CAPAZ DE VOLTAR</p>
+      </div>
+    </header>
+
+    <main>
+        <section class="sec1">
+            <div class="container" data-aos="fade-right" data-aos-duration="1500">
+                <p class="paragrafo">O Falcon 9 é um foguete reutilizável de dois estágios projetado e fabricado pela SpaceX para o transporte confiável e seguro de pessoas e cargas úteis para a órbita da Terra e além. Falcon 9 é o primeiro foguete reutilizável de classe orbital do mundo. A capacidade de reutilização permite que a SpaceX refile as partes mais caras do foguete, o que, por sua vez, reduz o custo do acesso ao espaço.</p>
+            </div>
+        </section>
+
+        <section>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="1000000">
+                        <div class="carousel-caption d-none d-md-block descricao">
+                            <p>FALCON 9</p>
+                            <h2>VISÃO GERAL</h2>
+                            <div>
+                                <p data-aos="fade-right" data-aos-duration="1500">
+                                  ALTURA	70 m/ 229.6 f
+                                  <hr>
+                                </p>
+                                
+                                <p data-aos="fade-right" data-aos-duration="1500">
+                                  DIAMETRO	3.7 m / 12 ft
+                                  <hr>
+                                </p>
+
+                                <p data-aos="fade-right" data-aos-duration="1500">
+                                  MASSA	549,054 kg / 1,207,920 lb
+                                  <hr>
+                                </p>
+
+                                <p data-aos="fade-right" data-aos-duration="1500">
+                                  CARGA MÁXIMA PARA LEO	22,800 kg / 50,265 lb
+                                  <hr>
+                                </p>
+
+                                <p data-aos="fade-right" data-aos-duration="1500">
+                                  CARGA MÁXIMA PARA GTO	8,300 kg / 18,300 lb
+                                  <hr>
+                                </p>
+
+                                <p data-aos="fade-right" data-aos-duration="1500">
+                                  CARGA MÁXIMA PARA MARTE	4,020 kg / 8,860 lb
+                                  <hr>
+                                </p>
+                            </div>
+                        </div>
+                    <img src="../falcon9/03.jpg" class="d-block w-100" alt="visao-geral">
+                  </div>
+                  <div class="carousel-item" data-bs-interval="1000000">
+                        <div class="carousel-caption d-none d-md-block descricao">
+                            <p>FALCON 9</p>
+                            <h2>PRIMEIRO ESTÁGIO</h2>
+                            <p>Falcon 9’s O primeiro estágio do Falcon 9 incorpora nove motores Merlin e tanques de liga de alumínio-lítio contendo oxigênio líquido e propelente de querosene de grau de foguete (RP-1).</p>
+                            <p>O Falcon 9 gera mais de 1,7 milhão de libras de empuxo ao nível do mar</p>
+                        </div>
+                        <img src="../falcon9/04.jpg" class="d-block w-100" alt="primeiro-estagio">
+                  </div>
+                  <div class="carousel-item" data-bs-interval="1000000">
+                        <div class="carousel-caption d-none d-md-block descricao">
+                            <p>FALCON 9</p>
+                            <h2>SEGUNDO ESTÁGIO</h2>
+                            <p>O segundo estágio, alimentado por um único motor a vácuo Merlin, entrega a carga útil do Falcon 9 à órbita desejada. O motor do segundo estágio acende alguns segundos após a separação do estágio e pode ser reiniciado várias vezes para colocar várias cargas em diferentes órbitas.</p>
+                            <p> NÚMERO DE MOTORES	1 vacuum
+                                <hr>
+                                TEMPO DE QUEIMA	397seg
+                                <hr>
+                                IMPULSO	981 kN / 220.500 lbf
+                                <hr>
+                              </p>
+                        </div>
+                        <img src="../falcon9/05.jpg" class="d-block w-100" alt="segundo-estagio">
+                  </div>
+                  <div class="carousel-item" data-bs-interval="1000000">
+                        <div class="carousel-caption d-none d-md-block descricao">
+                            <p>FALCON 9</p>
+                            <h2>INTERESTADUAL</h2>
+                            <p>A interestadual é uma estrutura composta que conecta o primeiro e o segundo estágios e abriga os empurradores pneumáticos que permitem que o primeiro e o segundo estágios se separem durante o vôo.</p>
+                            <h2 class="h6">ALETAS DE GRADE</h3>
+                            <p>O Falcon 9 está equipado com quatro aletas de grade hipersônicas posicionadas na base da interestadual. Eles orientam o foguete durante a reentrada, movendo o centro de pressão.</p>
+                        </div>
+                        <img src="../falcon9/06.jpg" class="d-block w-100" alt="interestadual">
+                  </div>
+                  <div class="carousel-item" data-bs-interval="1000000">
+                        <div class="carousel-caption d-none d-md-block descricao">
+                            <p>FALCON 9</p>
+                            <h2>CARGA ÚTIL</h2>
+                            <p>Feita de um material composto de carbono, a carenagem protege os satélites em seu caminho para a órbita. A carenagem é lançada a aproximadamente 3 minutos em vôo, e a SpaceX continua a recuperar as carenagens para reutilização em missões futuras.</p>
+                            <p> ALTURA	13,1m /43 ft
+                                <hr>
+                                DIÂMETRO	5,2m /17,1 ft
+                                <hr>
+                            </p>
+                        </div>
+                        <img src="../falcon9/07.jpg" class="d-block w-100" alt="carga-util">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+
+
+        <section class="sec2">
+          <div class="container descricao" data-aos="fade-right" data-aos-duration="1500">
+            <p>FALCON 9</p>
+            <h2>MERLIN</h2>
+            <p>Merlin é uma família de motores de foguete desenvolvidos pela SpaceX para uso em seus veículos de lançamento Falcon 1, Falcon 9 e Falcon Heavy. Os motores Merlin usam querosene de grau de foguete (RP-1) e oxigênio líquido como propelentes de foguete em um ciclo de energia de gerador a gás. O motor Merlin foi originalmente projetado para recuperação e reutilização.</p>
+          </div>
+        </section>
+
+
+        <section class="sec5">
+            <div class="container cont">
+                <p data-aos="fade-right" data-aos-duration="1500">Para mais informações sobre os serviçoes entre em contato com <a href="#" style="color:#D8D8D8">emailfictício@gmail.com</a></p>
+                <button type="button" class="btn btn-outline-light px-3 py-3 mx-1 my-1" data-aos="flip-left" data-aos-duration="1500">
+                    BAIXAR GUIA DO USUÁRIO
+               </button>
+               <button type="button" class="btn btn-outline-light px-3 py-3 mx-1 my-1" data-aos="flip-left" data-aos-duration="1500">
+                    CAPACIDADES E SERVIÇOS
+                </button>
+            </div>
+          </section>
+    </main>
+
+
+    <footer>
+        <div class="container text-center pb-5">
+          <span class="m-2" style="color: #555252">Sitebased © 2022</span>
+          <a class="m-2" href="">Instagram</a>
+          <a class="m-2" href="">YouTube</a>
+          <a class="m-2" href="">Twitter</a>
+        </div>
+      </footer>
+
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
