--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -14,8 +14,8 @@
 <body>
   <main data-theme="dark">
     <header class="flex align-center justify-between">
-      <h1>Calc.js</h1>
-      <button id="themeSwitcher">Switch Theme Dark/Light</button>
+      <h1>Calculadora</h1>
+      <button id="themeSwitcher">Trocar Tema Escuro/Claro</button>
     </header>
     <input type="text" id="input">
     <div id="keys">
@@ -41,7 +41,7 @@
       <button id="equal">=</button>
     </div>
     <section class="flex align-center justify-between">
-      <button id="copyToClipboard">Copy</button>
+      <button id="copyToClipboard">Copiar</button>
       <input type="text" id="result" disabled>
     </section>
   </main>
